--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <div class="row mt-5" >
     
       <div class="col-4">
-        <img src="/Images/ImgPuzzle.jpg" id="img1" width="200" height="120"/>
+        <img src="ImgPuzzle.jpg" id="img1" width="200" height="120"/>
       </div>
    
       <div class="col-4">
-        <img src="/Images/ImgPuzzle.jpg" id="img2" width="200" height="120"/>
+        <img src="ImgPuzzle.jpg" id="img2" width="200" height="120"/>
       </div>
       <div class="col-4">
-        <img src="/Images/ImgPuzzle.jpg" id="img2" width="200" height="120"/>
+        <img src="ImgPuzzle.jpg" id="img2" width="200" height="120"/>
       </div>
     
     </div>
